# translate_evaluation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.py  evaluate.py  pyproject.toml  requirements.txt  translate.py  utils.py
data/: translation.json
src/: __init__.py  config.py  evaluator.py  logger.py  main.py  translator.py  utils.py  visualizer.py
