[project]
name = "evaluate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bert-score>=0.3.11",
    "datasets>=1.15.0",
    "matplotlib>=3.4.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.0.0",
    "seaborn>=0.11.0",
    "torch>=1.9.0",
    "tqdm>=4.62.0",
    "transformers>=4.12.0",
]
